<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.codigo.aplios</groupId>
	<artifactId>aplios</artifactId>
	<version>1.0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<description>Test</description>
	<properties>
		<java.version>10</java.version>
		<maven.compiler.release>10</maven.compiler.release>
		<maven.compiler.source>9</maven.compiler.source> 
		<maven.compiler.target>9</maven.compiler.target> 
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<checker.framework.version>2.5.6</checker.framework.version>
		<junit.version>4.13-beta-2</junit.version>
		<junit.jupiter.api.version>5.4.0</junit.jupiter.api.version>
		<junit.jupiter.engine.version>5.4.0</junit.jupiter.engine.version>
		<junit.platform.version>1.4.0</junit.platform.version>
		<junit.vintage.version>5.4.0</junit.vintage.version>
		<junit.jupiter.engine>5.4.0</junit.jupiter.engine>
		<junit.jupiter.params>5.4.0</junit.jupiter.params>
		<jasypt.version>1.9.2</jasypt.version>
		<hamcrest.all.version>1.3</hamcrest.all.version>
		<google.guice.version>4.2.2</google.guice.version>
		<javax.persistence.version>2.2.1</javax.persistence.version>
		<validation.api.version>2.0.1.Final</validation.api.version>
		<eclipse.persistence.core.version>2.7.4</eclipse.persistence.core.version>
		<eclipse.collections>9.2.0</eclipse.collections>
		<jaxb.api.version>2.3.0</jaxb.api.version>
		<slf4j.version>1.8.0-beta4</slf4j.version>
		<log4j.version>1.2.17</log4j.version>
		<checkerframework.version>2.7.0</checkerframework.version>
		<annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
	</properties>
	<!-- <pluginRepositories> <pluginRepository> <id>some-repo</id> <name>Some 
		Repository</name> <url>d:\codigo.warehouse\pakiety\maven\repository</url> 
		<releases> <enabled>true</enabled> </releases> <snapshots> <enabled>true</enabled> 
		</snapshots> </pluginRepository> </pluginRepositories> -->
	<build>
		<plugins>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-compiler-plugin</artifactId> 
				<version>2.3.2</version> <configuration> <encoding>${project.build.sourceEncoding}</encoding> 
				</configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
				<artifactId>maven-resources-plugin</artifactId> <version>2.4.3</version> 
				<configuration> <encoding>${project.build.sourceEncoding}</encoding> </configuration> 
				</plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<failOnViolation>false</failOnViolation> <!-- this is actually true by default, but can be disabled -->
					<printFailingErrors>true</printFailingErrors>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<!-- <dependencies> <dependency> <groupId>org.ow2.asm</groupId> <artifactId>asm</artifactId> 
					<version>6.1.1</version> </dependency> </dependencies> -->
				<configuration>
					<verbose></verbose>
					<fork>true</fork>
					<meminitial>1024m</meminitial>
					<maxmem>2024m</maxmem>
					<Xmaxerrs>10000</Xmaxerrs>
					<Xmaxwarns>10000</Xmaxwarns>
					<encoding>${project.build.sourceEncoding}</encoding>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>java.xml.bind</arg>
						<!-- <arg>-Xbootclasspath/p:${annotatedJdk}</arg> -->
					</compilerArgs>
					<!-- <annotationProcessorPaths> <path> <groupId>org.checkerframework</groupId> 
						<artifactId>checker</artifactId> <version>${checker.framework.version}</version> 
						</path> </annotationProcessorPaths> <annotationProcessors> <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor> 
						<annotationProcessor>org.checkerframework.checker.tainting.TaintingChecker</annotationProcessor> 
						<annotationProcessor>org.checkerframework.checker.units.UnitsChecker</annotationProcessor> 
						</annotationProcessors> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<!-- <detectJavaApiLink>true</detectJavaApiLink> <offlineLinks> <offlineLink> 
						<url>https://docs.oracle.com/javase/${maven.compiler.release}/docs/api/</url> 
						<location>${project.basedir}</location> </offlineLink> </offlineLinks> -->
					<additionalOptions>-html5</additionalOptions>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
					<failOnError>false</failOnError>
					<doclint>none</doclint>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.21.0</version>
				<configuration>
					<parallel>methods</parallel>
					<threadCount>10</threadCount>
					<!-- <groups> com.codigo.aplios.data.sort </groups> -->
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit4</artifactId>
						<version>2.21.0</version>
					</dependency>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.2.0</version>
					</dependency>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.jupiter.engine}</version>
					</dependency>
					<dependency>
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm</artifactId>
						<version>6.1.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<outputDirectory>
						${project.build.directory}/modules
					</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/modules
							</outputDirectory>
							<includeScope>runtime</includeScope>
							<excludeArtifactIds>
								spring-boot-devtools,jaxb-api,jaxb-core,jaxb-runtime
							</excludeArtifactIds>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.checkerframework</groupId>
				<artifactId>checker</artifactId>
				<version>${checkerframework.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.checkerframework</groupId>
				<artifactId>jdk8</artifactId>
				<version>2.7.0</version>
			</dependency>
			<dependency>
				<groupId>org.checkerframework</groupId>
				<artifactId>checker-qual</artifactId>
				<version>2.7.0</version>
			</dependency>
			<dependency>
				<groupId>org.jasypt</groupId>
				<artifactId>jasypt</artifactId>
				<version>${jasypt.version}</version>
				<scope>test</scope>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>${hamcrest.all.version}</version>
				<type>jar</type>
			</dependency>
			<!-- JUNIT CONFIGURATION -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.jupiter.api.version}</version>
				<scope>test</scope>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.jupiter.engine.version}</version>
				<scope>test</scope>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.junit.vintage</groupId>
				<artifactId>junit-vintage-engine</artifactId>
				<version>${junit.vintage.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-engine</artifactId>
				<version>${junit.platform.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-runner</artifactId>
				<version>${junit.platform.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-launcher</artifactId>
				<version>${junit.platform.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit.jupiter.params}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>${google.guice.version}</version>
				<scope>test</scope>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.eclipse.persistence</groupId>
				<artifactId>javax.persistence</artifactId>
				<version>${javax.persistence.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${validation.api.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.eclipse.persistence</groupId>
				<artifactId>org.eclipse.persistence.core</artifactId>
				<version>${eclipse.persistence.core.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.eclipse.collections</groupId>
				<artifactId>eclipse-collections</artifactId>
				<version>10.0.0.M2</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.eclipse.collections</groupId>
				<artifactId>eclipse-collections-api</artifactId>
				<version>10.0.0.M2</version>
				<type>jar</type>
			</dependency>
			<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
			<!-- <dependency> <groupId>javax.xml.bind</groupId> <artifactId>jaxb-api</artifactId> 
				<version>${jaxb.api.version}</version> </dependency> -->
			<dependency>
				<groupId>org.glassfish.jaxb</groupId>
				<artifactId>jaxb-runtime</artifactId>
				<version>2.4.0-b180830.0438</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>javax.activation-api</artifactId>
				<version>1.2.0</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/log4j/log4j -->
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>2.4.0-b180830.0359</version>
			</dependency>
			<dependency>
				<groupId>net.java.dev.jna</groupId>
				<artifactId>jna-platform</artifactId>
				<version>5.2.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.11.0</version>
			</plugin>
		</plugins>
	</reporting>
	<modules>
		<module>sdk</module>
		<module>corporate</module>
		<module>data</module>
		<module>domain</module>
		<module>repository</module>
		<module>aplios-math</module>
		<module>aplios-validation</module>
		<module>checksum</module>
		<module>timeline</module>
		<module>xbase</module>
		<module>toolbox</module>
		<module>gui</module>
		<module>barcodes</module>
		<module>calculator</module>
		<module>commander</module>
	</modules>
</project>